--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build -s
+          pip install build
       - name: Build package
-        run: python -m build
+        run: python -m build -s
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
