--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ setuptools>=59.6.0
 six==1.16.0
 testit-api-client==3.0.1
 urllib3==1.26.15
-wheel==0.38.4
+wheel>=0.37.1
 validators==0.20.0
 tqdm==4.65.0
 
