--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-pip>=21.3.1
+pip==23.1.2
 python-dateutil==2.8.2
-setuptools>=59.6.0
+setuptools==67.8.0
 six==1.16.0
-testit-api-client==3.0.1
+testit-api-client==3.1.1
 urllib3==1.26.15
-wheel>=0.37.1
+wheel==0.40.0
 validators==0.20.0
 tqdm>=4.64.1
 
 flake8
-flake8-bugbear>=22.9.23
+flake8-bugbear==23.5.9
 flake8-print
 
 isort
 
-black>=22.8.0
+black==23.3.0
