--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pip==21.3.1
 python-dateutil==2.8.2
-setuptools==67.8.0
+setuptools>=59.6.0
 six==1.16.0
 testit-api-client==3.1.1
 urllib3==1.26.15
