--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ validators==0.20.0
 tqdm>=4.64.1
 
 flake8
-flake8-bugbear==23.5.9
+flake8-bugbear>=22.9.23
 flake8-print
 
 isort
 
-black==23.3.0
+black>=22.8.0
