--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ pip>=21.3.1
 python-dateutil==2.8.2
 setuptools>=59.6.0
 six==1.16.0
-testit-api-client==5.0.0
-urllib3==1.26.15
+testit-api-client==5.1.1.post522
+urllib3==2.2.2
 wheel>=0.37.1
 validators==0.20.0
 tqdm>=4.64.1
