--- a/.github/workflows/check_build.yml
+++ b/.github/workflows/check_build.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Check version
+        run: |
+          VERSION=$(grep -oP 'VERSION\s*=\s*"\K[^"]+' setup.py)
+          python .version_check/check.py $VERSION
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -25,3 +30,4 @@ jobs:
 
       - name: Build package
         run: python -m build -s
+        
