--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ pip>=21.3.1
 python-dateutil==2.8.2
 setuptools>=59.6.0
 six==1.16.0
-testit-api-client==6.0.1.post530
-urllib3==2.2.2
+testit-api-client==7.0.1
+urllib3==2.5.0
 wheel>=0.37.1
 validators==0.20.0
 tqdm>=4.64.1
