--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pip>=21.3.1
 python-dateutil==2.8.2
 setuptools>=59.6.0
 six==1.16.0
-testit-api-client==6.0.1.post530
+testit-api-client==7.0.1
 urllib3==2.2.2
 wheel>=0.37.1
 validators==0.20.0
